[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
description = "A tool to analyze and manipulate transcript segment graph (TSG)"
homepage = "https://github.com/cauliyang/tsg"
repository = "https://github.com/cauliyang/tsg"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
bon = "3.5.0"
bstr = "1.11.3"
bytes = "1"
flate2 = { version = "1.1.0", features = ["zlib-ng"], default-features = false }
noodles = { version = "0.94", features = ["fasta"] }
petgraph = { version = "0.7.1", features = ["serde-1"] }
rayon = { version = "1.10" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
byteorder = "1"
zstd = "0.13"

tsg-core = { version = "0.1.3", path = "crates/tsg-core" }

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
